--- a/starship.toml
+++ b/starship.toml
@@ -3,28 +3,29 @@ palette = "catppuccin_mocha"
 
 command_timeout=1000
 
-format = """
-$directory\
-$cmd_duration\
+add_newline = true
+continuation_prompt = "[▸▹ ](dimmed white)"
+
+format = """($nix_shell$container$fill$git_metrics\n)$cmd_duration\
 $hostname\
 $localip\
 $shlvl\
 $shell\
 $env_var\
-$username\
+$jobs\
 $sudo\
-$character\
-"""
+$username\
+$character"""
 
 right_format = """
 $singularity\
 $kubernetes\
+$directory\
 $vcsh\
 $fossil_branch\
 $git_branch\
 $git_commit\
 $git_state\
-$git_metrics\
 $git_status\
 $hg_branch\
 $pijul_channel\
@@ -73,7 +74,6 @@ $vlang\
 $vagrant\
 $zig\
 $buf\
-$nix_shell\
 $conda\
 $meson\
 $spack\
@@ -84,19 +84,13 @@ $openstack\
 $azure\
 $crystal\
 $custom\
-$jobs\
 $status\
 $os\
-$container\
 $battery\
-$time\
-"""
+$time"""
 
-[character]
-# Note the use of Catppuccin color 'maroon'
-success_symbol = "[[✓](green) ❯](maroon)"
-error_symbol = "[❯](red)"
-vimcmd_symbol = "[❮](green)"
+[fill]
+symbol = ' '
 
 
 [palettes.catppuccin_mocha]
@@ -127,41 +121,11 @@ base = "#1e1e2e"
 mantle = "#181825"
 crust = "#11111b"
 
-
-[aws]
-symbol = "  "
-
-[buf]
-symbol = " "
-
 [bun]
 format = "via [$symbol]($style)"
 
-[c]
-symbol = " "
-
-[conda]
-symbol = " "
-
 [crystal]
 symbol = " "
-
-[dart]
-symbol = " "
-
-[directory]
-read_only = " 󰌾"
-truncation_length = 4
-style = "bold mocha"
-
-[docker_context]
-symbol = " "
-
-[elixir]
-symbol = " "
-
-[elm]
-symbol = " "
 
 [fennel]
 symbol = " "
@@ -169,17 +133,8 @@ symbol = " "
 [fossil_branch]
 symbol = " "
 
-[git_branch]
-symbol = " "
-
-[golang]
-symbol = " "
-
 [guix_shell]
 symbol = " "
-
-[haskell]
-symbol = " "
 
 [haxe]
 symbol = " "
@@ -190,83 +145,14 @@ symbol = " "
 [hostname]
 ssh_symbol = " "
 
-[java]
-symbol = " "
-
-[julia]
-symbol = " "
-
 [kotlin]
 symbol = " "
-
-[lua]
-symbol = " "
-
-[memory_usage]
-symbol = "󰍛 "
 
 [meson]
 symbol = "󰔷 "
 
-[nim]
-symbol = "󰆥 "
-
-[nix_shell]
-symbol = " "
-
-[nodejs]
-symbol = " "
-
 [ocaml]
 symbol = " "
-
-[os.symbols]
-Alpaquita = " "
-Alpine = " "
-AlmaLinux = " "
-Amazon = " "
-Android = " "
-Arch = " "
-Artix = " "
-CentOS = " "
-Debian = " "
-DragonFly = " "
-Emscripten = " "
-EndeavourOS = " "
-Fedora = " "
-FreeBSD = " "
-Garuda = "󰛓 "
-Gentoo = " "
-HardenedBSD = "󰞌 "
-Illumos = "󰈸 "
-Kali = " "
-Linux = " "
-Mabox = " "
-Macos = " "
-Manjaro = " "
-Mariner = " "
-MidnightBSD = " "
-Mint = " "
-NetBSD = " "
-NixOS = " "
-OpenBSD = "󰈺 "
-openSUSE = " "
-OracleLinux = "󰌷 "
-Pop = " "
-Raspbian = " "
-Redhat = " "
-RedHatEnterprise = " "
-RockyLinux = " "
-Redox = "󰀘 "
-Solus = "󰠳 "
-SUSE = " "
-Ubuntu = " "
-Unknown = " "
-Void = " "
-Windows = "󰍲 "
-
-[package]
-symbol = "󰏗 "
 
 [perl]
 symbol = " "
@@ -274,29 +160,237 @@ symbol = " "
 [php]
 symbol = " "
 
-[pijul_channel]
-symbol = " "
-
-[python]
-symbol = " "
-
-[rlang]
-symbol = "󰟔 "
-
-[ruby]
-symbol = " "
-
-[rust]
-symbol = " "
-
 [scala]
 symbol = " "
 
-[swift]
-symbol = " "
-
 [zig]
 symbol = " "
+
+
+[character]
+format = "$symbol "
+success_symbol = "[◎](bold italic bright-yellow)"
+error_symbol = "[○](italic purple)"
+vimcmd_symbol = "[■](italic dimmed green)"
+# not supported in zsh
+vimcmd_replace_one_symbol = "◌"
+vimcmd_replace_symbol = "□"
+vimcmd_visual_symbol = "▼"
+
+[env_var.VIMSHELL]
+format = "[$env_value]($style)"
+style = "#a6e3a1 italic"
+
+[sudo]
+format = "[$symbol]($style)"
+style = "bold italic #cba6f7"
+symbol = "⋈┈"
+disabled = false
+
+[username]
+style_user = "#f9e2af bold italic"
+style_root = "#eba0ac bold italic"
+format = "[⭘ $user]($style) "
+disabled = false
+show_always = false
+
+[directory]
+home_symbol = "⌂"
+truncation_length = 2
+truncation_symbol = "□ "
+read_only = " ◈"
+use_os_path_sep = true
+style = "italic #89b4fa"
+format = '[$path]($style)[$read_only]($read_only_style)'
+repo_root_style = 'bold #89b4fa'
+repo_root_format = '[$before_root_path]($before_repo_root_style)[$repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style) [△](bold bright-blue)'
+
+[cmd_duration]
+format = "[◄ $duration ](italic #cdd6f4)"
+
+[jobs]
+format = "[$symbol$number]($style) "
+style = "#cdd6f4"
+symbol = "[▶](#89b4fa italic)"
+
+[localip]
+ssh_only = true
+format = " ◯[$localipv4](bold #f5c2e7)"
+disabled = false
+
+[time]
+disabled = false
+format = "[ $time]($style)"
+time_format = "%R"
+utc_time_offset = "local"
+style = "italic #7f849c"
+
+[battery]
+format = "[ $percentage $symbol]($style)"
+full_symbol = "█"
+charging_symbol = "[↑](italic bold green)"
+discharging_symbol = "↓"
+unknown_symbol = "░"
+empty_symbol = "▃"
+
+[[battery.display]]
+threshold = 20
+style = "italic bold #f38ba8"
+
+[[battery.display]]
+threshold = 60
+style = "italic dimmed #cba6f7"
+
+[[battery.display]]
+threshold = 70
+style = "italic dimmed #f9e2af"
+
+[git_branch]
+format = " [$branch(:$remote_branch)]($style)"
+symbol = "[△](bold italic bright-blue)"
+style = "italic #89dceb"
+truncation_symbol = "⋯"
+truncation_length = 11
+ignore_branches = ["main", "master"]
+only_attached = true
+
+[git_metrics]
+format = '([▴$added]($added_style))([▿$deleted]($deleted_style))'
+added_style = 'italic dimmed #a6e3a1'
+deleted_style = 'italic dimmed #f38ba8'
+ignore_submodules = true
+disabled = false
+
+[git_status]
+style = "bold italic #89dceb"
+format = "([⎪$ahead_behind$staged$modified$untracked$renamed$deleted$conflicted$stashed⎥]($style))"
+conflicted = "[◪◦](italic #f5c2e7)"
+ahead = "[▴│[${count}](bold #cdd6f4)│](italic #a6e3a1)"
+behind = "[▿│[${count}](bold #cdd6f4)│](italic #f38ba8)"
+diverged = "[◇ ▴┤[${ahead_count}](regular #cdd6f4)│▿┤[${behind_count}](regular #cdd6f4)│](italic #f5c2e7)"
+untracked = "[◌◦](italic #f9e2af)"
+stashed = "[◃◈](italic #cdd6f4)"
+modified = "[●◦](italic #f9e2af)"
+staged = "[▪┤[$count](bold #cdd6f4)│](italic #94e2d5)"
+renamed = "[◎◦](italic #89dceb)"
+deleted = "[✕](italic #f38ba8)"
+
+[deno]
+format = " [deno](italic) [∫ $version](bold #a6e3a1)"
+version_format = "${raw}"
+
+[lua]
+format = " [lua](italic) [${symbol}${version}]($style)"
+version_format = "${raw}"
+symbol = "⨀ "
+style = "bold #f9e2af"
+
+[nodejs]
+format = " [node](italic) [◫ ($version)](bold #a6e3a1)"
+version_format = "${raw}"
+detect_files = ["package-lock.json", "yarn.lock"]
+detect_folders = ["node_modules"]
+detect_extensions = []
+
+[python]
+format = " [py](italic) [${symbol}${version}]($style)"
+symbol = "[⌉](bold #89dceb)⌊ "
+version_format = "${raw}"
+style = "bold #f9e2af"
+
+[ruby]
+format = " [rb](italic) [${symbol}${version}]($style)"
+symbol = "◆ "
+version_format = "${raw}"
+style = "bold #f38ba8"
+
+[rust]
+format = " [rs](italic) [$symbol$version]($style)"
+symbol = "⊃ "
+version_format = "${raw}"
+style = "bold #f38ba8"
+
+[package]
+format = " [pkg](italic dimmed) [$symbol$version]($style)"
+version_format = "${raw}"
+symbol = "◨ "
+style = "dimmed #f9e2af italic bold"
+
+[swift]
+format = " [sw](italic) [${symbol}${version}]($style)"
+symbol = "◁ "
+style = "bold #f38ba8"
+version_format = "${raw}"
+
+[aws]
+disabled = true
+format = " [aws](italic) [$symbol $profile $region]($style)"
+style = "bold #89b4fa"
+symbol = "▲ "
+
+[buf]
+symbol = "■ "
+format = " [buf](italic) [$symbol $version $buf_version]($style)"
+
+[c]
+symbol = "ℂ "
+format = " [$symbol($version(-$name))]($style)"
+
+[conda]
+symbol = "◯ "
+format = " conda [$symbol$environment]($style)"
+
+[dart]
+symbol = "◁◅ "
+format = " dart [$symbol($version )]($style)"
+
+[docker_context]
+symbol = "◧ "
+format = " docker [$symbol$context]($style)"
+
+[elixir]
+symbol = "△ "
+format = " exs [$symbol $version OTP $otp_version ]($style)"
+
+[elm]
+symbol = "◩ "
+format = " elm [$symbol($version )]($style)"
+
+[golang]
+symbol = "∩ "
+format = " go [$symbol($version )]($style)"
+
+[haskell]
+symbol = "❯λ "
+format = " hs [$symbol($version )]($style)"
+
+[java]
+symbol = "∪ "
+format = " java [${symbol}(${version} )]($style)"
+
+[julia]
+symbol = "◎ "
+format = " jl [$symbol($version )]($style)"
+
+[memory_usage]
+symbol = "▪▫▪ "
+format = " mem [${ram}( ${swap})]($style)"
+
+[nim]
+symbol = "▴▲▴ "
+format = " nim [$symbol($version )]($style)"
+
+[nix_shell]
+style = 'bold italic dimmed #89b4fa'
+symbol = '✶'
+format = '[$symbol nix⎪$state⎪]($style) [$name](italic dimmed #cdd6f4)'
+impure_msg = '[⌽](bold dimmed #f38ba8)'
+pure_msg = '[⌾](bold dimmed #a6e3a1)'
+unknown_msg = '[◌](bold dimmed yellow)'
+
+[spack]
+symbol = "◇ "
+format = " spack [$symbol$environment]($style)"
 
 
 
